Fix IE: Button contents shift when pressed [#155240754]

--- a/src/css/buttons/buttons.scss
+++ b/src/css/buttons/buttons.scss
@@ -44,6 +44,7 @@
     display: inline-flex;
     justify-content: center;
     width: 100%;
+    position:relative;
   }
 
   span.pui-btn-inner-content > * + *, span.btn-inner-content > * + * {
